se arreglo el problema de que el primer servidor no leia el segundo , sin embargo una sola red.